ITProDev_12122020/01-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: itprodev
---
apiVersion: v1
kind: Pod
metadata:
  name: itprodev
  namespace: itprodev
  labels:
    app: nginx
spec:
    containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
