ITProDev_12122020/02-nginxIngress.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: itprodevingress
---
apiVersion: v1
kind: Pod
metadata:
  name: itprodevingress
  namespace: itprodevingress
  labels:
    app: itprodevingress
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: itprodevingress
  namespace: itprodevingress
spec:
  selector:
    app: itprodevingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: itprodevingress
  namespace: itprodevingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: itprodevingress
          servicePort: 80
